<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>PostgreSqlWidget</class>
 <widget class="QWidget" name="PostgreSqlWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>360</width>
    <height>125</height>
   </rect>
  </property>
  <property name="font">
   <font>
    <family>DejaVu Sans</family>
    <pointsize>8</pointsize>
   </font>
  </property>
  <property name="windowTitle">
   <string>PostgreSQL Server</string>
  </property>
  <property name="toolTip">
   <string>PostgreSQL Server</string>
  </property>
  <property name="statusTip">
   <string>PostgreSQL Server</string>
  </property>
  <property name="locale">
   <locale language="English" country="UnitedStates"/>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <property name="horizontalSpacing">
    <number>4</number>
   </property>
   <property name="verticalSpacing">
    <number>2</number>
   </property>
   <item row="5" column="0">
    <widget class="QLabel" name="lblLogin">
     <property name="text">
      <string>Login/Username</string>
     </property>
     <property name="buddy">
      <cstring>cmbLogin</cstring>
     </property>
    </widget>
   </item>
   <item row="6" column="1" colspan="2">
    <widget class="QLineEdit" name="editPassword"/>
   </item>
   <item row="4" column="1" colspan="2">
    <widget class="QComboBox" name="cmbDatabase">
     <property name="editable">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item row="5" column="1" colspan="2">
    <widget class="QComboBox" name="cmbLogin">
     <property name="editable">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item row="6" column="0">
    <widget class="QLabel" name="lblPassword">
     <property name="text">
      <string>Password</string>
     </property>
     <property name="buddy">
      <cstring>editPassword</cstring>
     </property>
    </widget>
   </item>
   <item row="0" column="0">
    <widget class="QLabel" name="lblServerPort">
     <property name="text">
      <string>Server &amp;&amp; Port</string>
     </property>
     <property name="buddy">
      <cstring>cmbServer</cstring>
     </property>
    </widget>
   </item>
   <item row="0" column="1">
    <widget class="QComboBox" name="cmbServer">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="editable">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item row="4" column="0">
    <widget class="QLabel" name="lblDatabase">
     <property name="text">
      <string>Database</string>
     </property>
     <property name="buddy">
      <cstring>cmbDatabase</cstring>
     </property>
    </widget>
   </item>
   <item row="0" column="2">
    <widget class="QSpinBox" name="spinPort">
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
     <property name="minimum">
      <number>1</number>
     </property>
     <property name="maximum">
      <number>65535</number>
     </property>
     <property name="value">
      <number>5432</number>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
